# python-125

./: README.md
sample_projects/: pyproject.toml  web_automation.py  web_scraping.py
workshop_1/: README.md  homework.py  main.py
workshop_2/: README.md  conditionals.py  homework.py  main.py  password_checker.py  string_methods.py  type_casting.py  user_input.py
workshop_3/: 1_lists.py  2_for_loop.py  3_while_loop.py  4_break_continue.py  5_nested_loops.py  6_practical_examples.py  README.md  continue.py  homework.py  lists.py  loops.py  min_max.py  range.py  users.py
workshop_3/homeworks/: task_2.py  task_3.py  task_4.py  task_6.py
workshop_4/: 1_functions_basics.py  2_default_and_keyword_args.py  3_scope.py  4_multiple_returns_and_tuples.py  5_practical_examples.py  README.md  functions.py  green_house.py  homework.py  none.py  return_values.py  scope_example.py
workshop_4/homework/: task_1.py  task_2.py  task_4.py  task_5.py  task_6.py
workshop_5/: 1_dictionaries_basics.py  2_dictionary_methods.py  3_nested_dictionaries.py  4_sets.py  5_practical_examples.py  README.md  homework.py
workshop_5/homeworks/: task_1.py  task_2.py  task_3.py  task_4.py  task_5.py  task_6.py
workshop_6/: README.md  homework.py  slicing.py
workshop_7/: 1_classes_basics.py  2_attributes_and_self.py  3_methods.py  4_inheritance.py  5_dunder_methods.py  6_practical_examples.py  7_why_classes.py  README.md  homework.py
workshop_7/homeworks/: task_5.py  task_6.py
workshop_8/: list_comprehension.py  recursion.py  search.py  slicing.py
workshop_9/: pyproject.toml
(+7 files in other folders)
